# pycox

./: .gitignore  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  requirements-dev.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish_pypi.yml  pythonpackage.yml
datasets/: README.md
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: 01_introduction.ipynb  01_quick_start.ipynb  02_general_usage.ipynb  02_introduction.ipynb  03_network_architectures.ipynb  04_mnist_dataloaders_cnn.ipynb  README.md  administrative_brier_score.ipynb  cox-cc.ipynb  cox-ph.ipynb  cox-time.ipynb  cox_models_1_introduction.ipynb  cox_models_2_advanced.ipynb  deephit.ipynb  deephit_competing_risks.ipynb  lightning_coxph.py  lightning_logistic_hazard.py  mtlr.ipynb  pc-hazard.ipynb  pmf.ipynb  torch_cox.py  torch_deephit_single.py  torch_logistic_hazard.py
pycox/: __init__.py  callbacks.py  cox.py  dataloader.py  dataloader_old.py  metrics.py  pytorch_dataloader.py  simulations.py  torch_fitter.py  utils.py
pycox/callbacks/: __init__.py  callbacks.py
pycox/datasets/: __init__.py  _dataset_loader.py  from_deepsurv.py  from_kkbox.py  from_rdatasets.py  from_simulations.py  kkbox.py
pycox/evaluation/: __init__.py  admin.py  concordance.py  eval_surv.py  ipcw.py  km_inverce_censor_weight.py  metrics.py  utils.py
pycox/models/: __init__.py  _cox_pyth.py  base.py  bce_surv.py  cox.py  (+20 more)
tests/: test_pycox.py  test_utils.py
(+32 files in other folders)
