[bumpversion]
current_version = 0.2.3
commit = True
tag = False

[metadata]
license_files = LICENSE

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:pycox/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'
